plugins {
	id 'org.openjfx.javafxplugin' version '0.0.14'
	id 'java'
	id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.openjfx:javafx-base:19.0.2'
	implementation 'org.openjfx:javafx-controls:19.0.2'
	implementation 'org.openjfx:javafx-fxml:19.0.2'
	implementation 'org.openjfx:javafx-media:21.0.2'
	implementation 'javazoom:jlayer:1.0.1'
	implementation 'org.openjfx:javafx-media:21.0.2'
	implementation 'com.google.code.gson:gson:2.11.0'
	implementation 'net.jthink:jaudiotagger:3.0.1'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	testImplementation 'org.mockito:mockito-core:5.5.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'

	implementation 'org.jflac:jflac-codec:1.5.2'
	implementation 'com.googlecode.soundlibs:jlayer:1.0.1.4'
	implementation 'org.xiph:vorbis-java:1.0.0-beta'
}

javafx {
	version = "19.0.2"
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

test {
	useJUnitPlatform()
}

application {
	mainClass = 'com.example.jambo.Jambo'
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources']
		}
	}
}
